--- a/package.json
+++ b/package.json
@@ -3,22 +3,6 @@
   "version": "0.1.0",
   "description": "A real-time visualizer for the bitcoin blockchain",
   "repository": "https://github.com/SimplGy/bitcoin-visualizer.git",
-  "main": "index.js",
-  "scripts": {
-    "clean": "rimraf dist/*",
-
-    "build:html": "cp app/*.html dist",
-    "build:js": "browserify app/**.js > dist/all.js",
-    "build:css": "find app -name '*.css' -exec cat {} \\; > dist/all.css",
-    "build": "npm run build:html && npm run build:js && npm run build:css",
-
-    "watch": "nodemon -q -w app/ --ext '.' --exec 'npm run build'",
-    "live-reload": "live-reload --port 9091 -i 300 dist/",
-    "serve": "http-server -p 9090 dist/",
-    "open": "opener http://localhost:9090",
-
-    "dev": "npm run open -s & parallelshell 'npm run live-reload -s' 'npm run serve -s' 'npm run watch -s'"
-  },
   "keywords": [
     "bitcoin",
     "blockchain",
@@ -27,12 +11,24 @@
   "author": "@simplgy",
   "license": "MIT",
   "devDependencies": {
-    "browserify": "latest",
-    "http-server": "latest",
-    "live-reload": "^1.1.0",
-    "nodemon": "latest",
-    "opener": "latest",
-    "parallelshell": "latest",
-    "rimraf": "latest"
+    "browser-sync": "^2.6.4",
+    "browserify": "^9.0.8",
+    "chalk": "^1.0.0",
+    "del": "^1.1.1",
+    "globby": "^2.0.0",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-cssmin": "^0.1.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.4",
+    "lodash": "^3.7.0",
+    "reactify": "^1.1.0",
+    "require-dir": "^0.3.0",
+    "through2": "^0.6.5",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.1.1"
   }
 }
