--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.1.1"
+  },
+  "dependencies": {
+    "moment": "^2.10.2"
   }
 }
