--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
   ],
   "author": "@simplgy",
   "license": "MIT",
+  "scripts": {
+    "test": "gulp -- prepare-tests && jasmine-node dist/test.js --matchall"
+  },
   "devDependencies": {
     "browser-sync": "^2.6.4",
     "browserify": "^9.0.8",
     "chalk": "^1.0.0",
     "del": "^1.1.1",
+    "glob": "^5.0.5",
     "globby": "^2.0.0",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-cssmin": "^0.1.6",
+    "gulp-plumber": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
+    "jasmine-node": "^1.14.5",
     "lodash": "^3.7.0",
     "reactify": "^1.1.0",
     "require-dir": "^0.3.0",
